swagger fix, constant update in frontend, changed navbar display of "crea inserzione", english translations
